# Football_Kalshi_Trading

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.claude/rules/: coding.md  patterns.md  workflow.md
.github/workflows/: backtest.yml  lint.yml  test.yml
.hypothesis/constants/: 019be6a5342d7217  0e30ca843ac46f77  14d3756937c93d95  185d30d1cc7cce9d  25c68bd925f2fc26  2e87842dd34e88b4  3a78a08e83b1c53f  3c397b0e9ddbcde6  3f2f3ba9c6b3ad21  40d7732216e67cfe  4e6cdb81f0b277a9  4f81659b1b3cb6bf  604a89e0521d3c5b  699a5077a077442a  6af39e723fd3ba19  6b8644688157da59  6f6bca66de239d0f  774855568986bcce  7d4b5bfe39ffe66b  8287acfed0b4c7a8  8fbbd20cd0452ee9  8fe779e1841def2f  90d679c6c3d4038a  96d8d31ddf66a75b  (+20 more)
config/: system.yaml
docker/: docker-compose.yml
docs/: api_reference_goalserve.md  api_reference_odds_api.md  blueprint.md  config_reference.md  dashboard.md  dashboard_decomposition.md  deployment_guide.md  implementation_roadmap.md  kalshi_api_exploration.md  orchestration.md  phase1.md  phase2.md  phase3.md  phase4.md
monitoring/: prometheus.yml
outputs/: kalshi_exploration_raw.json  params_1204.json
scripts/: benchmark_xgb_vs_pinnacle.py  collect_all_historical.py  download_football_data_odds.py  explore_kalshi.py  gap_fill_missing_seasons.py  insert_production_params.py  inspect_fixture.py  inspect_fixture2.py  inspect_fixture3.py  odds_backfill.py  probe_commentaries.py  probe_historical.py  replay_match.py  retrain_phase1_full.py  run_phase1_epl.py  run_phase1_stepwise.py  run_step_1_4_epl.py  verify_networking.sh  verify_phase1_full.py
sql/: schema.sql
(+188 files in other folders)
